--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,60 +3,61 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐淘后台系统主页</title>
-    <!-- 1. 需要什么包就引入什么包
-    2. css在head中 js在body结束标签上面
-    3. 如果有依赖的 先引入依赖的再引入不依赖的
-    4. 先引入第三方 在引入自己的 -->
-    <!-- 1. 引入bootstrap.css -->
+    <title>后台主页</title>
+    <!-- 1.引入bootstrap.css -->
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
-    <!-- 2. 如果需要字体图标引入字体图标库的css -->
-    <link rel="stylesheet" href="./lib/font-awesome/css/font-awesome.css">
-    <!-- 3. 引入自己css -->
+    <!-- 2. 引入主页页面自己的css -->
     <link rel="stylesheet" href="./less/index.css">
 </head>
 
 <body>
-    <!-- 主页主体内容 -->
     <main id="main">
+        <!-- 左侧边栏 -->
         <div class="left">
-            <div class="user-info">
-                <img src="./images/25.png" alt="">
-                <p>LCC</p>
+            <!-- 左侧头像 -->
+            <div class="logo">
+                <img src="./images/1.png" alt="">
+                <p>小姐姐</p>
             </div>
+            <!-- 左侧列表组 -->
             <div class="list-group">
-                <a href="index.html" class="list-group-item active">
+                <a href="#" class="list-group-item active ">
                     用户管理
                 </a>
-                <!-- 折叠效果 使用bootstrapjs插件 collapse -->
-                <!-- a就是控制div展开收缩的按钮  -->
-                <!-- data-toggle="collapse" 开关是否开启这个折叠菜单功能 -->
-                <!-- href指定要控制元素 -->
-                <!-- data-target也是指定要控制元素（如果按钮非超链接使用这个属性） -->
-                <a data-toggle="collapse" href="#collapseExample" class="list-group-item">分类管理</a>
-                <!-- 通过id选择器关联 -->
-                <!-- collapse是默认隐藏的类名
-                如果默认要显示使用collapse in -->
-                <div class="collapse category-manage" id="collapseExample">
-                    <a href="firstCategory.html" class="list-group-item">一级分类</a>
-                    <a href="secondCategory.html" class="list-group-item">二级分类</a>
+                <!-- 给你要点击的a添加 这2个属性 注意a本身有一个href删掉之前href -->
+                <!-- href="#collapseExample" 关联要切换的内容id选择器 -->
+                <a class="list-group-item " data-toggle="collapse" href="#collapseExample">分类管理</a>
+                <!-- 不能把内容包裹在a标签里面 因为a不能包含a -->
+                <!-- collapse控制显示隐藏   collapse表示隐藏  collapse in 表示显示 -->
+                <div class="collapse in" id="collapseExample">
+                    <div class="list-group">
+                        <a href="#" class="list-group-item ">
+                            一级分类
+                        </a>
+                        <a href="#" class="list-group-item ">
+                            二级分类
+                        </a>
+                    </div>
                 </div>
                 <a href="#" class="list-group-item">商品管理</a>
             </div>
         </div>
+        <!-- 右侧内容 -->
         <div class="right">
-            <div class="title">
-                <a href="#" class="fa fa-navicon btn-menu"></a>
-                <a href="#" class="fa fa-sign-out btn-exit">退出</a>
-            </div>
-            <div class="content">
-                <!-- 表格  带边框 带条纹 鼠标悬停 -->
-                <table class="table table-bordered table-striped table-hover info">
+            <!-- 右侧的头部 -->
+            <header id="header">
+                <a href="#" class="glyphicon glyphicon-th-list"></a>
+                <a href="#" class="glyphicon glyphicon-off exit">退出</a>
+            </header>
+            <!-- 表格内容 -->
+            <section id="info">
+                <table class="table table-hover table-bordered table-striped">
                     <thead>
                         <tr>
-                            <th>#</th>
+                            <th>id</th>
                             <th>用户名</th>
                             <th>手机号</th>
                             <th>状态</th>
@@ -67,95 +68,56 @@
                         <tr>
                             <th scope="row">1</th>
                             <td>itcast</td>
-                            <td>15102324243</td>
+                            <td>11333333</td>
                             <td>已启用</td>
                             <td><button type="button" class="btn btn-danger">禁用</button></td>
                         </tr>
                         <tr>
                             <th scope="row">1</th>
                             <td>itcast</td>
-                            <td>15102324243</td>
-                            <td>已禁用</td>
-                            <td><button type="button" class="btn btn-success">启用</button></td>
+                            <td>11333333</td>
+                            <td>已启用</td>
+                            <td><button type="button" class="btn btn-danger">禁用</button></td>
                         </tr>
                         <tr>
                             <th scope="row">1</th>
                             <td>itcast</td>
-                            <td>15102324243</td>
-                            <td>已禁用</td>
-                            <td><button type="button" class="btn btn-success">启用</button></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>itcast</td>
-                            <td>15102324243</td>
-                            <td>已禁用</td>
-                            <td><button type="button" class="btn btn-success">启用</button></td>
+                            <td>11333333</td>
+                            <td>已启用</td>
+                            <td><button type="button" class="btn btn-danger">禁用</button></td>
                         </tr>
 
                     </tbody>
                 </table>
-                <!-- 分页 -->
-                <nav aria-label="Page navigation">
-                    <ul class="pagination page-list">
-                      
-                    </ul>
-                </nav>
-            </div>
+            </section>
         </div>
     </main>
-    <!-- 创建一个用户信息的模板 -->
-    <script id="userInfoTpl" type="text/html">
+    <!-- 创建用户信息表格的模板 -->
+    <script id="userTpl" type="text/html">
         {{each rows value}}
-            <tr>
-                <th scope="row">1</th>
-                <td>{{value.username}}</td>
-                <td>{{value.mobile}}</td>
-                <!-- value.isDelete == 0 表示禁用 == 1 表示启用 -->
-                <!-- 判断如果isDelete == 0 表示已禁用 文字变成禁用 按钮变成启用
-                否则相反 -->
-                {{if value.isDelete == 0}}
-                    <td>已禁用</td>
-                    <!-- 注意自定义属性一定不能大写 -->
-                    <td><button type="button" class="btn btn-success btn-option" data-id="{{value.id}}" data-isdelete="{{value.isDelete}}">启用</button></td>
-                {{else}}
-                    <td>已启用</td>
-                    <td><button type="button" class="btn btn-danger btn-option" data-id="{{value.id}}" data-isdelete="{{value.isDelete}}">禁用</button></td>
-                {{/if}}
-                
-            </tr>
+        <tr>
+            <th scope="row">{{value.id}}</th>
+            <td>{{value.username}}</td>
+            <td>{{value.mobile}}</td>
+            <!-- 用户状态通过value.isDelete来判断 == 0 表示已禁用 （按钮变成启用）  == 1 表示已启用 (按钮变成禁用)
+            启用是绿色按钮 禁用是红色按钮 -->
+            {{if value.isDelete == 0}}
+            <td>已禁用</td>
+            <!-- 属性名都不会大小注意使用-分割 -->
+            <td><button type="button" class="btn btn-success btn-option" data-id="{{value.id}}" data-is-delete="{{value.isDelete}}">启用</button></td>
+            {{else}}
+            <td>已启用</td>
+            <td><button type="button" class="btn btn-danger btn-option" data-id="{{value.id}}" data-is-delete="{{value.isDelete}}">禁用</button></td>
+            {{/if}}
+        </tr>
         {{/each}}
     </script>
-    <!-- 创建一个分页按钮的模板 -->
-    <script id="pageTpl" type="text/html">
-        <!-- page就是当前页码数 上一页就是page-1 -->
-        <!-- 判断如果(page-1) < 1 表示第一页以下 默认就为第一页  如果不小于就你当前-1的页码数 -->
-        <li data-page="{{(page-1) < 1 ? 1 : (page-1)}}">
-            <a href="javascript:;" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        {{each pages value}}
-            <!-- 判断遍历的每一个页码数和当前点击的页码数是否一致 一致添加类名active否则添加为空 -->
-            <li data-page="{{value}}" class="{{value == page ? 'active':''}}"><a href="javascript:;">{{value}}</a></li>
-        {{/each}}
-        <!-- 下一页就是page+1 -->
-        <!-- (page+1) > 最大页面(pages总页数数组的长度) 默认为总页数长度 否则就 +1页 -->
-        <li data-page="{{(page+1) > pages.length ? pages.length : (page+1)}}">
-            <a href="javascript:;" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </script>
-    <!-- 1. bootstrap依赖jquery 先引入jQuery -->
+    <!-- 1. 引入jquery -->
     <script src="./lib/jquery/jquery.js"></script>
     <!-- 2. 引入bootstrap的js -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
-    <!-- 3. 引入模板引擎template-web -->
+    <!-- 3. 引入模板引擎的包  注意引入template-web.js文件-->
     <script src="./lib/artTemplate/template-web.js"></script>
-    <!-- 4. 引入jquery+bootstrap的分页插件 -->
-    <script src="./lib/bootstrap/js/bootstrap-paginator.js"></script>
-    <!-- 5. 引入自己的js -->
     <script src="./js/index.js"></script>
 </body>
 
