--- a/public/m/search.html
+++ b/public/m/search.html
@@ -3,131 +3,130 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- 1. 设置视口 -->
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <!-- 添加视口 -->
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>自己写乐淘移动端搜索页面</title>
-    <!-- 1. 引入MUI的CSS文件 使用这个没有压缩 mui.css带了rem单位 -->
+    <title>自写的乐淘移动端商品搜索</title>
+    <!-- 1. 也要使用一个UI框架 叫MUI 像bootstrap一样引包  引入mui.css -->
     <link rel="stylesheet" href="./lib/mui/css/mui.css">
-    <!-- 2. 引入fontawesome字体图标库的css文件 提供页面中字体图标-->
+    <!-- 2. 引入font-awesome字体图标库 -->
     <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.css">
-    <!-- 4. 如果想使用swiper轮播图 因为swiper的css-->
-    <link rel="stylesheet" href="./lib/swiper/css/swiper.css">
-    <!-- 3. 引入自己的css文件 -->
+    <!-- 3. 引入首页自己的css文件 -->
     <link rel="stylesheet" href="./less/search.css">
 </head>
 
 <body>
-    <!-- 头部区域 -->
+    <!-- 公共的头部区域 -->
     <header id="header">
         <div class="left">
             <a href="#" class="fa fa-arrow-left"></a>
         </div>
         <div class="center">
-            <h4>乐淘搜索</h4>
+            <h4>搜索中心</h4>
         </div>
         <div class="right">
 
         </div>
     </header>
-
-    <!-- 主体区域 -->
+    <!-- 主体内容 -->
     <main id="main">
-        <div class="mui-scroll-wrapper">
-            <div class="mui-scroll">
-                <!--这里放置真实显示的DOM内容-->
-                <!-- 搜索表单 -->
-                <div class="search-form">
-                    <form>
-                        <input type="search" placeholder="请输入要搜索的商品" class="input-search">
-                        <button type="button" class="mui-btn mui-btn-primary btn-search">搜索</button>
-                    </form>
-                </div>
-                <!-- 搜索历史 -->
-                <div class="search-history">
-                    <!-- <div class="title">
-                    <span>搜索历史</span>
-                    <a href="#" class="fa fa-trash">清空记录</a>
-                </div>
-                <div class="content">             
-                    <ul class="mui-table-view">
-                        <li class="mui-table-view-cell">Item 1
-                            <span class="mui-badge fa fa-close"></span>
-                        </li>
-                        <li class="mui-table-view-cell">Item 2
-                            <span class="mui-badge  fa fa-close"></span>
-                        </li>
-                        <li class="mui-table-view-cell ">Item 3
-                            <span class="mui-badge fa fa-close"></span>
-                        </li>
-                    </ul>
-                </div> -->
-                    <!-- 使用MUI的卡片组件 -->
-                    <div class="mui-card">
-                        <!--页眉，放置标题-->
-                        <div class="mui-card-header">
-                            <span>搜索历史</span>
-                            <a href="#" class="fa fa-trash btn-clear">清空记录</a>
-                        </div>
-                        <!--内容区-->
-                        <div class="mui-card-content">
-                            <!-- MUi数字角标的列表 -->
-                            <ul class="mui-table-view">
-                                <li class="mui-table-view-cell">Item 1
-                                    <span class="mui-badge fa fa-close"></span>
-                                </li>
-                                <li class="mui-table-view-cell">Item 2
-                                    <span class="mui-badge  fa fa-close"></span>
-                                </li>
-                                <li class="mui-table-view-cell ">Item 3
-                                    <span class="mui-badge fa fa-close"></span>
-                                </li>
-                            </ul>
-                        </div>
+        <!-- 搜索表单 -->
+        <form action="#" class="search-form">
+            <input type="search" placeholder="请输入要搜索的商品" class="input-search">
+            <button type="button" class="mui-btn mui-btn-primary btn-search">搜索</button>
+        </form>
+        <!-- 搜索历史 -->
+        <div class="mui-card search-history">
+            <!--页眉，放置标题-->
+            <div class="mui-card-header">
+                <span>搜索历史</span>
+                <span class="fa fa-trash btn-clear">清空记录</span>
+            </div>
+            <!--内容区-->
+            <div class="mui-card-content">
+                <div class="mui-scroll-wrapper">
+                    <div class="mui-scroll">
+                        <!--这里放置真实显示的DOM内容-->
+                        <ul class="mui-table-view">
+                            <li class="mui-table-view-cell">
+                                记录1
+                                <!-- mui-badge mui提供 右边带数字角标的样式 添加一个x图标 -->
+                                <span class="mui-badge fa fa-close"></span>
+                            </li>
+                            <li class="mui-table-view-cell">
+                                记录2
+                                <!-- mui-badge mui提供 右边带数字角标的样式 添加一个x图标 -->
+                                <span class="mui-badge fa fa-close"></span>
+                            </li>
+                            <li class="mui-table-view-cell">
+                                记录3
+                                <!-- mui-badge mui提供 右边带数字角标的样式 添加一个x图标 -->
+                                <span class="mui-badge fa fa-close"></span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+
             </div>
         </div>
-
     </main>
-    <!-- 底部区域 -->
+    <!-- 公共的底部区域 -->
     <footer id="footer">
+        <!-- mui的栅格和bootstrap一样也是行和列组成 一行最多12列 只有2中屏幕 xs  和 sm  行不需要放容器
+            列 必须放行里面 -->
         <div class="mui-row">
-            <!-- .mui-col-xs-3*4>a[href="index.html"]>i.fa.fa-home+span{首页} -->
-            <div class="mui-col-xs-3"><a href="index.html" class="active"><i class="fa fa-home"></i><span>首页</span></a></div>
-            <div class="mui-col-xs-3"><a href="category.html"><i class="fa fa-bars"></i><span>分类</span></a></div>
-            <div class="mui-col-xs-3"><a href="cart.html"><i class="fa fa-shopping-cart"></i><span>购物车</span></a></div>
-            <div class="mui-col-xs-3"><a href="user.html"><i class="fa fa-user"></i><span>个人中心</span></a></div>
+            <div class="mui-col-xs-3">
+                <a href="index.html">
+                    <i class="fa fa-home"></i>
+                    <span>首页</span>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="category.html">
+                    <i class="fa fa-bars"></i>
+                    <span>分类</span>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="cart.html">
+                    <i class="fa fa-shopping-cart"></i>
+                    <span>购物车</span>
+                </a>
+            </div>
+            <div class="mui-col-xs-3">
+                <a href="user.html">
+                    <i class="fa fa-user"></i>
+                    <span>个人中心</span>
+                </a>
+            </div>
         </div>
     </footer>
     <!-- 创建一个搜索历史的模板 -->
-    <script id="searchHistoryTpl" type="text/html">
-        <!-- 判断数组有长度就遍历生成列表 没有长度就显示没有记录 -->
-        {{if list.length > 0}}
-            {{each list value i}}
-                <li class="mui-table-view-cell" data-search="{{value.key}}">
-                    {{value.key}}
-                    <span class="mui-badge fa fa-close btn-delete" data-index="{{i}}"></span>
-                </li>
-            {{/each}}
+    <script id="historyTpl" type="text/html">
+        <!-- 判断返回数据没有长度 <= 0 表示没有数据 就提示 -->
+        {{if rows.length <= 0}}
+        <li class="mui-table-view-cell">
+            您的搜索记录 空空如也!
+        </li>
         {{else}}
+            <!-- each的是你自己包装的数组名 -->
+            {{each rows value index}}
             <li class="mui-table-view-cell">
-               您当前还没有搜索记录~
+                {{value}}
+                <!-- mui-badge mui提供 右边带数字角标的样式 添加一个x图标 -->
+                <span class="mui-badge fa fa-close btn-delete" data-index="{{index}}"></span>
             </li>
+            {{/each}}
         {{/if}}
     </script>
-
-    <!-- 1. 引入MUI的js文件 -->
+    <!-- 1. MUI和bootstrap一样 还有JS功能 引入mui.js  但是mui不依赖jquery-->
     <script src="./lib/mui/js/mui.js"></script>
-    <!-- 2. 引入zepto 获取元素 发送请求 和jq一样的功能适用移动端-->
+    <!-- 2. 引入zepto 帮助我们获取元素和ajax请求 -->
     <script src="./lib/zepto/zepto.min.js"></script>
-    <!-- 3. 有请求使用到模板 引入模板引擎 template-web.js-->
+    <!-- 3. 引入模板引擎的js artTemplate-web最新版-->
     <script src="./lib/artTemplate/template-web.js"></script>
-    <!-- 4. 引入swiper的js -->
-    <script src="./lib/swiper/js/swiper.js"></script>
-    <!-- 引入一个公共的js common.js 这里是一些公共的逻辑代码 -->
-    <script src="js/common.js"></script>
-    <!-- 5. 引入自己的js -->
+    <!-- 4. 引入自己的js文件 -->
     <script src="./js/search.js"></script>
 </body>
 
